compare50/html_renderer/static/compare50.css
/* Make text more readable */
body, h1, h4, h5 {
    font-family: inherit;
    counter-reset: line_numbers;
}

/* Don't underline title */
.block-title a {
    color: #000;
    text-decoration: none;
}

#sub_names {
  height: 3%;
}

#diff {
  height: 97%;
}

#left {
  overflow-y: scroll;
  left: 0;
  border: 1px solid black;
  border-top: 0;
  max-width: 50%;
}

#right {
  overflow-y: scroll;
  right: 0;
  border: 1px solid black;
  border-left: 0;
  border-top: 0;
  max-width: 50%;
}

.fragment:before {
  counter-reset: none;
}

/* highlighted code fragments */
.match {
    color: crimson;
    font-weight: bold;
}

.distro {
    color: silver;
}

.highlight {
    background-color: yellow;
}

/* style code samples */
.submission-file {
  border-top: 1px solid black;
  white-space: pre-wrap;
}
.submission-file code.newline {
  counter-increment: line_numbers;
}
.submission-file code.newline::before {
  content: counter(line_numbers) "";
  display: inline-block;
  width:3em;
}

